GNOME Bugzilla – Bug 754401
grilo-test-ui: Fix warning about deprecated gtk-menu-images
Last modified: 2015-09-01 14:46:23 UTC
.
Created attachment 310425 [details] [review] grilo-test-ui: Fix warning about deprecated gtk-menu-images Menus don't use images in recent versions of GTK+: The property GtkSettings:gtk-menu-images is deprecated and shouldn't be used anymore. It will be removed in a future version. Remove the icons from the menu items.
Review of attachment 310425 [details] [review]: Sure.
Attachment 310425 [details] pushed as fc4965d - grilo-test-ui: Fix warning about deprecated gtk-menu-images