grilo-test-ui: Fix warning about deprecated gtk-menu-images

Menus don't use images in recent versions of GTK+:
The property GtkSettings:gtk-menu-images is deprecated and shouldn't be used anymore. It will be removed in a future version.

Remove the icons from the menu items.

https://bugzilla.gnome.org/show_bug.cgi?id=754401